@@ -1020,16 +1020,6 @@ class Image:
                 cv.Merge(channel, channel, channel, None, self._bitmap)
                 self._colorSpace = ColorSpace.BGR
 
-
-        elif (type(source) == cv.iplimage):
-            if (source.nChannels == 1):
-                self._bitmap = cv.CreateImage(cv.GetSize(source), source.depth, 3)
-                cv.Merge(source, source, source, None, self._bitmap)
-                self._colorSpace = ColorSpace.GRAY
-            else:
-                self._bitmap = cv.CreateImage(cv.GetSize(source), source.depth, 3)
-                cv.Copy(source, self._bitmap, None) 
-                self._colorSpace = ColorSpace.BGR
         elif (type(source) == type(str()) or source.__class__.__name__ == 'StringIO'):
             if source == '':
                 raise IOError("No filename provided to Image constructor")
