@@ -1,6 +1,8 @@
 Changes in 1.4
 --------------
-* removed support for cvmat in ImageClass
+* removed old C-bindings
+** removed support for cvmat in ImageClass
+** removed support for iplimage in ImageClass
 * removed support for Haar (classifier) interface (i.e. dropped findHaarFeatures())
 
 
